# increment_cargo_version

./: .gitignore  Cargo.toml  README.md  Version.toml  increment_version.py
src/: main.rs
