[package]
name = "increment_version"
version = "0.1.6"
authors = ["Billy Sheppard <billysheppard@rmhedge.com>"]
edition = "2018"

[dependencies]
structopt = "0.3"
env_logger = "0.7"
log = "0.4"
toml = "0.5"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1.3"
anyhow = "1"
colored = "1.9"